guiduck/guiduck_networking.k8s.io-v1_NetworkPolicy_redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.5
    helm.sh/chart: redis-19.6.1
  name: redis
  namespace: guiduck
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 6379
  - ports:
    - port: 9121
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: redis
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  - Egress
